--- a/src/components/List/list.css
+++ b/src/components/List/list.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display&family=Work+Sans:wght@300&display=swap');
 
 .item-style {
+    display: flex;
+    justify-content: space-around;
     font-family: 'Work Sans', sans-serif;
     font-size: 1.25rem;
     text-align: center;
@@ -18,3 +20,4 @@
     padding-top: 1rem;
     margin-bottom: .25rem;
 }
+
