Fixed some stuff

--- a/src/components/List/list.css
+++ b/src/components/List/list.css
@@ -9,7 +9,7 @@
     font-weight: 800;
     color: #fff;
     border-color: #fff;
-    background-color: #03DAC6;
+    background-color: #3700b38f;
     width: 70%;
     height: 2rem;
     list-style: none;
